Fixed issues related to the layout of the pages. There was overlap by the footer and other minor issues.

--- a/metrics/interface/src/styles/contents.css
+++ b/metrics/interface/src/styles/contents.css
@@ -1,10 +1,3 @@
-#content {
-    top: 60px;
-    padding-bottom: 0;
-    display: flex;
-    flex-direction: column;
-}
-
 .introduction {
     padding: 10px 0;
 }
