--- a/metrics/interface/src/styles/footer.css
+++ b/metrics/interface/src/styles/footer.css
@@ -1,6 +1,6 @@
 #footer {
     box-sizing: border-box;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 60px;
